# Recipe-Generator

./: README.md  main.py  pyproject.toml  recipe_db.py  recipes.db
static/: script.js  styles.css
templates/: index.html  recipes.html
